--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+logging.level.org.springframework.security=DEBUG
 
 #config spring security
-spring.security.user.name=hoidanit
-spring.security.user.password=123456
+# spring.security.user.name=hoidanit
+# spring.security.user.password=123456
 
 # config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
